# simple-balance-management

./: .gitignore  BalanceManagement.postman_collection.json  Cargo.toml  Instruções para testar aplicação Balance Management.docx  README.md  arc-bmg.arc  docker-compose.yml
bd/pgdata/: postmaster.pid
bd/pgdata/base/13757/: pg_internal.init
bd/pgdata/base/16384/: 1247  1249  1249_fsm  1255  1259  16407  16408  16413  16417  16421  16422  16433  16438  16443  16448  16453  16465  16469  16470  16474  2224  2579  2604  2606  2608  2609  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+16 more)
bd/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
bd/pgdata/pg_stat/: db_0.stat  db_16384.stat  global.stat
bd/pgdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
bd/pgdata/pg_xact/: 0000
rust_api/: Cargo.toml
rust_api/src/: cad_usuario.rs  extrato_data.rs  main.rs  transacao.rs
src/api_router/: mod.rs
src/api_service/: mod.rs
